# init_python_config

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
docs/API/: Calculations.md
init_python_configuration/: __init__.py  calculations.py
